# OpenFortress

./: Cargo.toml  readme.md
.github/workflows/: ci.yaml
assets/tilesets/: protoype.psd  tileset_soil.psd
crates/animation/: Cargo.toml  readme.md
crates/animation/src/: animation.rs  lib.rs
crates/assets/: Cargo.toml  readme.md
crates/assets/src/: assets.rs  background_asset.rs  dwarf_sprite.rs  font_asset.rs  icon_asset.rs  lib.rs  resource_handles.rs  sound_assets.rs  tileset_asset.rs  ui_panel_asset.rs
crates/camera/: Cargo.toml  readme.md
crates/camera/src/: camera.rs  lib.rs
crates/common/: Cargo.toml  readme.md
crates/common/src/: components.rs  constants.rs  functions.rs  lib.rs  resources.rs  states.rs  systems.rs  traits.rs  types.rs
crates/common/src/components/: image_node_fade.rs  work_order.rs
crates/common/src/resources/: work_order_queue.rs
crates/common/src/traits/: as_vec2.rs  neighbors.rs  ui_root.rs
crates/designations/: Cargo.toml
crates/designations/src/: designations.rs  lib.rs  ui.rs
crates/dwarf/: Cargo.toml  readme.md
crates/dwarf/src/: lib.rs
crates/loading_screen/: Cargo.toml  readme.md
crates/loading_screen/src/: lib.rs
crates/main_game/: Cargo.toml
crates/main_game/src/: lib.rs
crates/map_generation/: Cargo.toml  bitmask_tiling.md  readme.md
crates/map_generation/src/: block_type.rs  chunk.rs  chunk_visualisation.rs  lib.rs  map_generation.rs  messages.rs  world_map.rs
crates/map_generation/src/chunk_visualisation/: mod.rs  plugin.rs  types.rs
crates/menu_screen/: Cargo.toml
crates/menu_screen/src/: lib.rs
crates/pathfinding/: Cargo.toml  readme.md
crates/pathfinding/src/: lib.rs  path.rs  pathfinder.rs  pathfinding.rs  pathfinding_map.rs
crates/splashscreen/: Cargo.toml
crates/splashscreen/src/: lib.rs
crates/ui/: Cargo.toml
crates/ui/src/: lib.rs
crates/work/: Cargo.toml  readme.md
crates/work/src/: lib.rs  tasks.rs  work_order_queue.rs
crates/work/src/tasks/: dig.rs  walk_to.rs  walk_to_nearest.rs
crates/world_generation/: Cargo.toml  readme.md
crates/world_generation/src/: lib.rs  world_generation.rs
data/: Cargo.toml
data/src/: lib.rs  position.rs
dwarf_plugin/: Cargo.toml
dwarf_plugin/src/: lib.rs
fps_plugin/: Cargo.toml
fps_plugin/src/: lib.rs
src/: camera.rs  dwarf_plugin.rs  lib.rs  main.rs  map.rs  path.rs  position.rs  tools.rs
task_plugin/: Cargo.toml
task_plugin/src/: lib.rs
