[workspace]
members = [
    "crates/*"
]
resolver = "2"

[package]
name = "open_fortress"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []

[workspace.dependencies]
bevy = "=0.16.0-rc.2"

[dependencies]
common = { path = "crates/common"}
dwarf = { path = "crates/dwarf"}
splashscreen = { path = "crates/splashscreen"}
bevy = { workspace = true }
