[workspace]
members = [
    "crates/*"
]
resolver = "2"

[package]
name = "open_fortress"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []

[workspace.dependencies]
bevy = "0.16"
noise = "0.9"
priority-queue = "2.3.1"
leafwing-input-manager = { git = "https://github.com/Leafwing-Studios/leafwing-input-manager.git" }
bevy-inspector-egui = "0.31"

[dependencies]
animation = { path = "crates/animation"}
assets = { path = "crates/assets"}
common = { path = "crates/common"}
loading_screen = { path = "crates/loading_screen"}
main_game = { path = "crates/main_game" }
menu_screen = { path = "crates/menu_screen"}
splashscreen = { path = "crates/splashscreen"}
ui = { path = "crates/ui"}
world_generation = { path = "crates/world_generation"}
bevy = { workspace = true }
bevy-inspector-egui = { workspace = true }

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
