[package]
name = "data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
debug = ["colored", "bevy-inspector-egui"]

[dependencies]
bevy = "0.9.1"
colored = { version = "2.0.0", optional = true }
bevy-inspector-egui = { version = "0.14.0", optional = true }
rand = { version = "0.8.5", features = ["small_rng"] }
priority-queue = "1.3.0"
