[package]
name = "designations"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { workspace = true }
bevy-inspector-egui = { workspace = true }
leafwing-input-manager = { workspace = true }
camera = { path = "../camera"}
common = { path = "../common" }
map_generation = { path = "../map_generation" }
work = { path = "../work" }