[package]
name = "main_game"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { workspace = true }
leafwing-input-manager = { workspace = true }
assets = { path = "../assets"}
camera = { path = "../camera"}
common = { path = "../common"}
dwarf = { path = "../dwarf"}
map_generation = { path = "../map_generation" }
pathfinding = { path = "../pathfinding" }
work = { path = "../work" }