[package]
name = "map_generation"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { workspace = true }
bevy_ecs_tilemap = { git = "https://github.com/StarArawn/bevy_ecs_tilemap.git" }
noise = { workspace = true }
assets = { path = "../assets" }
camera = { path = "../camera" }
common = { path = "../common" }